09.04.2006
Changes by Nuno Ramiro
	- Updated: VS 05 solution.
	- Fixed: SphereR packets - it is now compatible with 56b.
	- Reverted: Reverted MemGuard changes, it was not a good idea.
	- Removed: AnimationSmoothness was not doing anything other than overload.

09.04.2006
Changes by Florian Fischer (SiENcE)
	- Update: DevCpp and VS 2003 solution
	- Fixed: packed attribute in MultisLoader.h
	- Removed: Cal3D - isn't used anymore

07.04.2006
Changes by Florian Fischer (SiENcE)
	- old Container.cpp/h restored, because the new one had strange bugs (look at out bugtracker)
	- updated & reorganized the vs2003 project files
	- renamed the DevCpp project files to Iris
	- removed some unused variables

04.04.2006
Changes by Alexander Oster (Tensor) &  Florian Fischer (SiENcE)
	- WorldEnvironment.cpp added to renderer3D
	- lightning changed to gradient bmp files <- they should be added to textures dir
	- function added to csl to load this gradient textures
	- p.engine bug fixed
	- granny_aos.xml updated to support all AoS Models
	- modelsinfo.xml: scaling fixed for rabbit and rat

03.04.2006
Changes by Florian Fischer (SiENcE)
	- some csl things cleaned
	- cliloc_getmessage added to CSLHandler.cpp for PopUp-Menu
	- Comments Added to Maps.xml & Macros.xml

03.04.2006
Changes by Nuno Ramiro
	- Updated: Removed some files from makefile (still need to add Font.h/cpp and FontManager.h/cpp)
	- Updated: VS 03 solution.
	- Removed: Removed the CheckBox and RadioButton suport for this release since they were not working correctly.

02.04.2006
Changes by Florian Fischer (SiENcE)
	-Updated: Dev-cpp solution.

02.04.2006
Changes by Nuno Ramiro
	- Fixed: A bug with Container (Necromancer book was empty and probably other stuff bugged).
	- Rewritten: Font system has been rewritten from scratch.	
	- Removed: Debug Outputs.
	- Added: Copyright/GPL stuff under new files.

01.04.2006
Changes by Nuno Ramiro
	- Fixed: Crash bug (ImageArt).
	- Refactoring: ImageArt & Container.